--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@types/mongodb": "^3.6.12",
     "mongodb": "^3.6.5",
     "next": "10.1.3",
     "next-auth": "^3.13.3",
