--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
     "@types/styled-components": "^5.1.9",
+    "babel-plugin-styled-components": "^1.12.0",
     "typescript": "^4.2.3"
   }
 }
