--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   },
   "dependencies": {
     "@types/mongodb": "^3.6.12",
-    "mongodb": "^3.6.5",
     "next": "10.1.3",
     "next-auth": "^3.13.3",
     "react": "17.0.2",
@@ -23,5 +22,8 @@
     "@types/styled-components": "^5.1.9",
     "babel-plugin-styled-components": "^1.12.0",
     "typescript": "^4.2.3"
-  }
+  },
+  "peerOptionalDependencies": {
+    "mongodb": "^3.6.5",
+  },
 }
